--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
                         <li><a href="index.html">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li class="active"><a href="#">研究</a></li>
-                        <li><a href="publications.html">发表文献</a></li>
+                        <li><a href="publications.html">文献</a></li>
 			               <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
@@ -60,18 +60,15 @@
                            <h4>成员</h4>
                            <br/>
                            <p>
-                              马遥，胡俊，陈国忠，罗美，杨晓满，严瑾，易春蓉
-                           </p>
+                              陈国忠，罗美，杨晓满，秦子鑫
+			</p>
                         </section>
                         <hr>
                         <section id="content1">
                            <h4>研究方向</h4>
                            <br/>
                            <p>
-                             病原菌是研究 
-                           </p>
-                           <p>
-                             目前已经 
+                             病原微生物是指侵犯宿主引起感染甚至传染病的微生物。常见的病原菌有霍乱弧菌、痢疾杆菌、鼠疫杆菌以及梭状芽孢杆菌等等。霍乱弧菌是霍乱的病原菌，能够产生分泌到胞外的肠毒素引起患者腹泻，是课题组的重点研究对象。
                            </p>
                            <img src="images/.jpg" class="float-right" alt="Pathogen"/>
                         </section>
@@ -80,7 +77,7 @@
                   </div>
                </section>
                <hr>
-               <section id="interaction">
+               <section id="cultivate omics">
                   <div class="page-header">
                      <h3>微生物培养组学</h3>
                   </div>
@@ -90,29 +87,27 @@
                            <h4>成员</h4>
                            <br/>
                            <p>
-                              陈国忠，秦子鑫，石长萍，王向峰，易立文，陈嘉敏,师会强 
+                              王向峰，万熙春
                            </p>
                         </section>
                         <hr>
                         <section id="content2">
                            <h4>研究方向</h4>
                            <br/>
-                           <img src="images/.jpg" class="float-right" alt="interaction"/>
                            <p>
-                              课题是研究 
+                            培养组学是利用多种培养条件来进行培养细菌的方法。MALDI-TOF质谱以及16sRNA测序用来鉴定细菌物种。
                            </p>
-                           <p>
-                             目前已经 
-                           </p>
+				 <img src="images/.jpg" class="float-right" alt="interaction"/>
                         </section>
                         <hr>
                      </div>
                   </div>
                </section>
                <hr>
-               <section id="Cultivating Omics">
+                  
+               <section id="Probiotics">
                   <div class="page-header">
-                     <h3>噬菌体</h3>
+                     <h3>益生菌与宿主互作 </h3>
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
@@ -120,49 +115,16 @@
                            <h4>成员</h4>
                            <br/>
                            <p>
-                              陈景超，金梦露，赵雪阳
+                              李荣，李蓓，郭丁铭，易立文，易春荣，许莹 
                            </p>
                         </section>
                         <hr>
                         <section id="content3">
                            <h4>研究方向</h4>
                            <br/>
-                           <img src="images/ .jpg" class="float-right" alt="Cultivating Omics"/>
-                           <p>
-                             课题是研究 
-                           </p>
-                           <p>
-                             目前已经 
-                           </p>
-                        </section>
-                        <hr>
-                     </div>
-                  </div>
-               </section>
-               <hr>
-               <section id="phage">
-                  <div class="page-header">
-                     <h3>益生菌与宿主互作 </h3>
-                  </div>
-                  <div class="row-fluid">
-                     <div class="span12">
-                        <section id="people4">
-                           <h4>成员</h4>
-                           <br/>
-                           <p>
-                              石林，李荣，李蓓，石长萍，邓云，胡万平，朴彩佑，郭丁铭，王雨阳，聂庆庆，舒婷 
-                           </p>
-                        </section>
-                        <hr>
-                        <section id="content4">
-                           <h4>研究方向</h4>
-                           <br/>
                            <img src="images/ .jpg" class="float-right" alt="phage"/>
                            <p>
-                             课题是研究 
-                           </p>
-                           <p>
-                             目前已经 
+                             益生菌是指活的微生物，对宿主健康有益，主要包括乳杆菌属、双歧杆菌属以及肠球菌属等等。肠道菌群与慢性疾病和自身免疫病密切相关，通过益生菌干预肠道菌群是治疗这些疾病的非常有希望的干预手段，
                            </p>
                         </section>
                         <hr>
